# ShiftBuilder

./: package-lock.json  package.json
ShiftBuilder/: package-lock.json  package.json
ShiftBuilder/src/: App.css  App.tsx  main.tsx
ShiftBuilder/src-tauri/: Cargo.toml  tauri.conf.json
ShiftBuilder/src-tauri/src/: main.rs
ShiftBuilder/src/components/Members/: MemberList.tsx
ShiftBuilder/src/components/Timeline/: TimelineHeader.tsx  TimelineRow.tsx  TimelineView.tsx
ShiftBuilder/src/types/: Shift.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  commands.rs  drive.rs  main.rs  server.rs  sheet.rs  starter.rs
src/components/Header/: Header.tsx
src/components/Members/: MemberList.tsx
src/components/Timeline/: ShiftItem.tsx  TimeScaleRow.tsx  TimelineRow.tsx  TimelineView.tsx  styles.css
src/hooks/: useShiftData.ts
src/pages/: HomePage.tsx  LoginPage.tsx  MemberPage.tsx  ShiftPage.tsx
src/types/: ShiftDataTypes.ts
