[package]
name = "shiftbuilder"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tiny_http = "0.12"
url = "2"
oauth2 = { version = "4", features = ["reqwest"] }
reqwest = { version = "0.11", features = ["json", "blocking", "cookies", "gzip", "stream"] }
dirs = "5"
